Fix: Session List Layout - Misaligned 'Session information' link using pop-up layout on Be Software #303

--- a/themes/be.software.designers/css/style.css
+++ b/themes/be.software.designers/css/style.css
@@ -782,7 +782,8 @@ body.arlo {
     font-size: 1em;
 }
 
-.arlo#arlo .arlo-tooltip-button {
+.arlo#arlo .arlo-tooltip-button,
+.arlo#arlo .arlo-popup-button {
     text-align: left;
     display: inline-block;
 }
